[package]
name = "stack_offset_exceeded"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stack_offset_exceeded"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
switchboard-on-demand = { version = "0.3.5", default-features = false, features = [
    "no-entrypoint",
] }
